# capybara

./: .gitignore  Dockerfile  README.md  cmd.sh  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
capybara/: asgi.py  settings.py  urls.py  wsgi.py
core/: forms.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/templates/core/: base.html  home.html
