[tool.poetry]
name = "capybara"
version = "0.1.0"
description = ""
authors = ["Vlad Dmitrievich <me@2tunnels.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0"
psycopg2-binary = "^2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
